SET(SRC main.cpp KeyboardController.cpp SpaceshipController.cpp Message.cpp MoveMessage.cpp Component.cpp Movable.cpp Entity.cpp Spaceship.cpp)
ADD_EXECUTABLE(spaceinvaders ${SRC})
FIND_PACKAGE(SFML 2.0 REQUIRED system window graphics network audio)
TARGET_LINK_LIBRARIES(spaceinvaders ${SFML_LIBRARIES})
INSTALL(TARGETS spaceinvaders DESTINATION ${PROJECT_SOURCE_DIR}/bin)
