INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/)
SET(SRC main.cpp Observer.cpp Subject.cpp Coordinate.cpp SpaceInvaders.cpp)
ADD_SUBDIRECTORY(controllers)
ADD_SUBDIRECTORY(models)
ADD_SUBDIRECTORY(views)
ADD_SUBDIRECTORY(factories)
ADD_SUBDIRECTORY(messages)
ADD_SUBDIRECTORY(systems)
ADD_SUBDIRECTORY(config)
ADD_EXECUTABLE(spaceinvaders ${SRC})
FIND_PACKAGE(SFML 2.0 REQUIRED system window graphics network audio)
TARGET_LINK_LIBRARIES(spaceinvaders ${SFML_LIBRARIES})
INSTALL(TARGETS spaceinvaders DESTINATION ${PROJECT_SOURCE_DIR}/bin)
